# dice-roll

./: .gitignore  README.md
python/fast-api/: Makefile  pyproject.toml
python/fast-api/src/: config.py  main.py
python/fast-api/src/dice/: dice.py
python/fast-api/src/dice/entities/: multiroll.py  simpleroll.py
python/fast-api/src/rest/routers/: roll.py  status.py
python/fast-api/tests/: conftest.py  test_dice.py  test_multiroll.py  test_simpleroll.py  test_status.py
rust/axum/: Cargo.toml
rust/axum/src/: config.rs  dice.rs  lib.rs  main.rs
rust/axum/src/routers/: dice.rs  mod.rs  status.rs
rust/axum/tests/: dice.rs
